--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .row {
-  max-width: 992px; 
+  max-width: 992px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
@@ -31,6 +31,7 @@
 
 img{
   height: 200px;
+  margin-top: 30px;
 }
 
 
@@ -40,15 +41,14 @@ img{
   margin-left: auto;
 }
 
-#why .row > .first,
-#why .row > .second,
-#why .row > .third {
-  width: 100%;
-  margin-top: 80px;
-}
+
 
 #why .row img {
   background-color:#428bca;
   border-radius:50%;
   padding:30px
+}
+
+h3 {
+  margin-top: 30px;
 }
